Deployment/AppointmentDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: appointment-deployment
    labels:
        app: appointment
spec:
    replicas: 3
    selector:
        matchLabels:
            app: appointment
    template:
        metadata:
            labels:
                app: appointment
        spec:
            containers:
                -   name: appointment
                    image: pprasanna/ehr-appointment
                    imagePullPolicy: IfNotPresent
                    ports:
                    -   containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: appointment-service
spec:
    selector:
        app: appointment
    type: LoadBalancer
    ports:
        -   name: appointment-port
            port: 8013
            targetPort: 80
