Deployment/DoctorDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: doctor-deployment
    labels:
        app: doctor
spec:
    replicas: 2
    selector:
        matchLabels:
            app: doctor
    template:
        metadata:
            labels:
                app: doctor
        spec:
            containers:
                -   name: doctor
                    image: pprasanna/ehr-doctor
                    imagePullPolicy: IfNotPresent
                    ports:
                    -   containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: doctor-service
spec:
    selector:
        app: doctor
    type: LoadBalancer
    ports:
        -   name: doctor-port
            port: 8011
            targetPort: 80
