Deployment/MongoStatefulDeployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mongo
spec:
    serviceName: mongo
    replicas: 3
    selector:
        matchLabels:
            app: mongo
    template:
        metadata:
            labels:
                app: mongo
        spec:
            terminationGracePeriodSeconds: 10
            containers:
            -   name: mongo
                image: mongo
                ports:
                    -   containerPort: 27017
                volumeMounts:
                    -   name: mongo-data
                        mountPath: /data/db
    volumeClaimTemplates:
        -   metadata:
                name: mongo-data
            spec:
                accessModes: [ "ReadWriteOnce" ]
                storageClassName: hostpath
                resources:
                    requests:
                        storage: 100Mi
---
# Headless service
apiVersion: v1
kind: Service
metadata:
    name: mongo
    labels:
        app: mongo
spec:
    selector:
        app: mongo
    clusterIP: None
    ports:
        -   port: 27017
            targetPort: 27017
---
# Doctor service
apiVersion: v1
kind: Service
metadata:
    name: doctor-db
spec:
    selector:
        statefulset.kubernetes.io/pod-name: mongo-0
    type: LoadBalancer
    ports:
        -   name: doctor-db-port
            port: 27011
            targetPort: 27017
---
# Patient Service
apiVersion: v1
kind: Service
metadata:
    name: patient-db
spec:
    selector:
        statefulset.kubernetes.io/pod-name: mongo-1
    type: LoadBalancer
    ports:
        -   name: patient-db-port
            port: 27012
            targetPort: 27017
---
# Appointment Service
apiVersion: v1
kind: Service
metadata:
    name: appointment-db
spec:
    selector:
        statefulset.kubernetes.io/pod-name: mongo-2
    type: LoadBalancer
    ports:
        -   name: appointment-db-port
            port: 27013
            targetPort: 27017
