Deployment/PatientDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: patient-deployment
    labels:
        app: patient
spec:
    replicas: 3
    selector:
        matchLabels:
            app: patient
    template:
        metadata:
            labels:
                app: patient
        spec:
            containers:
                -   name: patient
                    image: pprasanna/ehr-patient
                    imagePullPolicy: IfNotPresent
                    ports:
                    -   containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: patient-service
spec:
    selector:
        app: patient
    type: LoadBalancer
    ports:
        -   name: patient-port
            port: 8012
            targetPort: 80
