Deployment/UIDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ui-deployment
    labels:
        app: ui  
spec:
    replicas: 5
    selector:
        matchLabels:
            app: ui    
    template:
        metadata:
            labels:
                app: ui
        spec:
            containers:
                -   name: ui
                    image: ehr/ui
                    imagePullPolicy: IfNotPresent
                    ports:
                    -   containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: ui-service
spec:
    selector:
        app: ui
    type: LoadBalancer
    ports:
        -   name: ui-port
            port: 8080
            targetPort: 80
